2010-09-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp (expose-create-window): Show window
	title in accel window.

2010-09-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* configure: Use the Xavier Maillard clfswm script in contrib to
	build an executable in the standard way.

2010-09-26  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp (expose-mode-display-accel-windows):
	New functions. Add a window on each child in the expose mode to
	quickly select them.

	* src/clfswm-internal.lisp (child-x, child-y, child-width)
	(child-height): New methods to get real child coordinates.

2010-09-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (*-layout): Use child-position.

	* src/clfswm-internal.lisp (child-position): New function.

	* src/clfswm-expose-mode.lisp (expose-windows-mode)
	(expose-all-windows-mode): Use a generic mode.

	* src/xlib-util.lisp (with-handle-event-symbol): Use a filled list
	with handle-event-fun symbols instead of inspecting clfswm
	internals symbols on each mode change.

	* src/clfswm-expose-mode.lisp: Move and rename present*-windows in
	a separate clfswm-expose-mode.lisp file.

	* src/clfswm-util.lisp (speed-mouse-right, speed-mouse-down): Use
	screen size instead of hardcoded test coordinates.

2010-09-24  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (speed-mouse-reset, speed-mouse-left)
	(speed-mouse-right, speed-mouse-up, speed-mouse-down)
	(speed-mouse-undo, speed-mouse-first-history): New functions to
	quickly move the mouse. Implemented for the second mode.

2010-09-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/clfswm: Move clfswm sources to $tmp_dir if there is no
	write permission on $clfswm_asd_path. So anybody can start clfswm
	even if there is no write permission on the source directory.

2010-09-12  Philippe Brochard  <pbrochard@common-lisp.net>
